sumo/tests/sumo/extended/vaporizer/errors/id_empty/errors.sumo
Error: Missing or empty id in a vaporizer-object.
Quitting (on error).
